Swagger Tag and Schema Update
