# src/controllers/contacts.js
@@ -2,6 +2,7 @@ const mongodb = require("../db/connect");
 const ObjectId = require("mongodb").ObjectId;
 
 const getAllContacts = async (req, res) => {
+    // #swagger.tags = ['Contacts']
     try {
         const result = await mongodb
             .getDB()
@@ -16,6 +17,7 @@ const getAllContacts = async (req, res) => {
 };
 
 const getContactById = async (req, res) => {
+    // #swagger.tags = ['Contacts']
     try {
         const id = req.params.id;
         const filter = {
@@ -35,6 +37,11 @@ const getContactById = async (req, res) => {
 };
 
 const createContact = async (req, res) => {
+    /*  #swagger.tags = ['Contacts']
+        #swagger.parameters['body'] = {
+            schema: { $ref: '#/definitions/Contacts' }
+        }
+    */
     try {
         const contact = {
             firstName: req.body.firstName,
@@ -60,9 +67,20 @@ const createContact = async (req, res) => {
 };
 
 const updateContact = async (req, res) => {
+    /* Swagger Definitions
+    #swagger.tags = ["Contacts"]
+    
+
+    */
     try {
         const id = req.params.id;
-        const contact = req.body;
+        const contact = {
+            firstName: req.body.firstName,
+            lastName: req.body.lastName,
+            email: req.body.email,
+            favoriteColor: req.body.favoriteColor,
+            birthday: req.body.birthday,
+        };
 
         const filter = {
             _id: new ObjectId(id),
@@ -86,6 +104,7 @@ const updateContact = async (req, res) => {
 };
 
 const deleteContact = async (req, res) => {
+    // #swagger.tags = ['Contacts']
     try {
         const id = req.params.id;
         const filter = {
